tests/snapshots/yaml_suite_snapshots__yaml_suite_M5DY_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 2.11. Mapping between Sequences
  from: "http://www.yaml.org/spec/1.2/spec.html#id2760799"
  tags: complex-key explicit-key spec mapping sequence
  yaml: "? - Detroit Tigers\n  - Chicago cubs\n:\n  - 2001-07-23\n\n? [ New York Yankees,\n    Atlanta Braves ]\n: [ 2001-07-02, 2001-08-12…"
  tree: "+STR\n +DOC\n  +MAP\n   +SEQ\n    =VAL :Detroit Tigers\n    =VAL :Chicago cubs\n   -SEQ\n   +SEQ\n    =VAL :2001-07-23\n   -SEQ\n   …"
  dump: "? - Detroit Tigers\n  - Chicago cubs\n: - 2001-07-23\n? - New York Yankees\n  - Atlanta Braves\n: - 2001-07-02\n  - 2001-08-12\n …"
