tests/snapshots/yaml_suite_snapshots__yaml_suite_M5DY_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "? - Detroit Tigers\n  - Chicago cubs\n: - 2001-07-23\n? - New York Yankees\n  - Atlanta Braves\n: - 2001-07-02\n  - 2001-08-12\n  - 2001-08-14\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2760799"
  name: Spec Example 2.11. Mapping between Sequences
  tags: complex-key explicit-key spec mapping sequence
  tree: "+STR\n +DOC\n  +MAP\n   +SEQ\n    =VAL :Detroit Tigers\n    =VAL :Chicago cubs\n   -SEQ\n   +SEQ\n    =VAL :2001-07-23\n   -SEQ\n   +SEQ []\n    =VAL :New York Yankees\n    =VAL :Atlanta Braves\n   -SEQ\n   +SEQ []\n    =VAL :2001-07-02\n    =VAL :2001-08-12\n    =VAL :2001-08-14\n   -SEQ\n  -MAP\n -DOC\n-STR\n"
  yaml: "? - Detroit Tigers\n  - Chicago cubs\n:\n  - 2001-07-23\n\n? [ New York Yankees,\n    Atlanta Braves ]\n: [ 2001-07-02, 2001-08-12,\n    2001-08-14 ]\n"
