tests/snapshots/yaml_suite_snapshots__yaml_suite_M6YH_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- |\n  x\n- foo: bar\n- - 42\n"
  from: "@ingydotnet"
  json: "[\n  \"x\\n\",\n  {\n    \"foo\" : \"bar\"\n  },\n  [\n    42\n  ]\n]\n"
  name: Block sequence indentation
  tags: indent
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL |x\\n\n   +MAP\n    =VAL :foo\n    =VAL :bar\n   -MAP\n   +SEQ\n    =VAL :42\n   -SEQ\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- |\n x\n-\n foo: bar\n-\n - 42\n"
