tests/snapshots/yaml_suite_snapshots__yaml_suite_M7NX_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Nested flow collections
  from: "@perlpunk"
  tags: flow mapping sequence
  yaml: "---\n{\n a: [\n  b, c, {\n   d: [e, f]\n  }\n ]\n}\n"
  tree: "+STR\n +DOC ---\n  +MAP {}\n   =VAL :a\n   +SEQ []\n    =VAL :b\n    =VAL :c\n    +MAP {}\n     =VAL :d\n     +SEQ []\n      =VAL :e\n      =VAL :f\n     -SEQ\n    -MAP\n   -SEQ\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"a\": [\n    \"b\",\n    \"c\",\n    {\n      \"d\": [\n        \"e\",\n        \"f\"\n      ]\n    }\n  ]\n}\n"
  dump: "---\na:\n- b\n- c\n- d:\n  - e\n  - f\n"
